feat: Improve header structure and styling for better accessibility and layout

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -11,11 +11,14 @@
 <body>
   <!-- Dashboard -->
   <div id="dashboard-view" class="hidden">
-    <div class="header">
+    <!-- Use semantic header element for better document structure -->
+    <header class="header">
       <div class="header-top">
-        <a href="index.html" class="logo">
+        <!-- Logo with improved accessibility -->
+        <a href="index.html" class="logo" aria-label="14KB Dashboard">
+          <!-- SVG uses currentColor to inherit accent from CSS -->
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-            viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet">
+            viewBox="0 0 191.000000 191.000000" preserveAspectRatio="xMidYMid meet" aria-hidden="true">
             <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
               <path d="M406 1889 c-175 -35 -325 -178 -371 -356 -21 -81 -22 -1071 -1 -1149
 47 -176 194 -315 374 -353 61 -13 1058 -16 1066 -3 2 4 -22 29 -55 55 -67 54
@@ -40,42 +43,45 @@
 221 -40 48 -135 112 -207 139 -55 21 -71 22 -587 23 -305 1 -551 -2 -579 -7z" />
             </g>
           </svg>
-          <span> 14<br>KB</span>
+          <!-- Stacked wordmark for compact branding -->
+          <span class="logo-text" aria-hidden="true">14<br>KB</span>
         </a>
-        <nav class="header-nav">
-          <a href="index.html" class="nav-icon active" title="Übersicht">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <!-- Semantic nav with improved structure -->
+        <nav class="header-nav" aria-label="Main navigation">
+          <a href="index.html" class="nav-icon active" aria-current="page">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
               <polyline points="9 22 9 12 15 12 15 22" />
             </svg>
             Übersicht
           </a>
-          <a href="editor.html" class="nav-icon" title="Neu erstellen">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <a href="editor.html" class="nav-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <line x1="12" y1="5" x2="12" y2="19" />
               <line x1="5" y1="12" x2="19" y2="12" />
             </svg>
             Neu
           </a>
-          <a href="settings.html" class="nav-icon" title="Einstellungen">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <a href="settings.html" class="nav-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <circle cx="12" cy="12" r="3" />
               <path
                 d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
             </svg>
             Einstellungen
           </a>
-          <a href="/" target="_blank" class="nav-icon" title="Blog ansehen">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <a href="/" target="_blank" rel="noopener" class="nav-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
               <polyline points="15 3 21 3 21 9" />
               <line x1="10" y1="14" x2="21" y2="3" />
             </svg>
             Blog
           </a>
-          <span class="nav-separator"></span>
-          <a href="#" id="logout-btn" class="nav-icon logout-icon" title="Logout">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <!-- Visual separator before logout -->
+          <span class="nav-separator" aria-hidden="true"></span>
+          <a href="#" id="logout-btn" class="nav-icon logout-icon">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
               <polyline points="16 17 21 12 16 7" />
               <line x1="21" y1="12" x2="9" y2="12" />
@@ -85,7 +91,7 @@
         </nav>
       </div>
       <h1 class="page-title">Übersicht</h1>
-    </div>
+    </header>
 
     <!-- Content Card -->
     <div class="editor-card">
