feat: Enhance logo accessibility and styling in header across admin pages

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -15,6 +15,7 @@
     <header class="header">
       <div class="header-top">
         <!-- Logo with improved accessibility -->
+         <div class="logo-container">
         <a href="index.html" class="logo" aria-label="14KB Dashboard">
           <!-- SVG uses currentColor to inherit accent from CSS -->
           <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
@@ -45,7 +46,7 @@
           </svg>
           <!-- Stacked wordmark for compact branding -->
           <span class="logo-text" aria-hidden="true">14<br>KB</span>
-        </a>
+        </a></div>
         <!-- Semantic nav with improved structure -->
         <nav class="header-nav" aria-label="Main navigation">
           <a href="index.html" class="nav-icon active" aria-current="page">
@@ -70,7 +71,7 @@
             </svg>
             Einstellungen
           </a>
-          <a href="/" target="_blank" rel="noopener" class="nav-icon">
+          <a href="/" target="_blank" rel="noopener" class="nav-icon external-link">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
               <polyline points="15 3 21 3 21 9" />
