feat: Add meta information fields for SEO in settings and update overhead calculations

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -1020,6 +1020,7 @@
           navigation,
           footer,
           css,
+          meta: null,
           icons: [],
           posts,
           allowPagination: allowPaginationCheckbox.checked,
