--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -141,6 +141,20 @@
             </div>
           </div>
         </div>
+
+        <div class="override-section">
+          <h3 class="override-section-title">Meta-Informationen</h3>
+          <p class="text-small text-muted mb-1">SEO-Tags die im &lt;head&gt; jeder Seite eingebettet werden</p>
+          <div class="form-group">
+            <label for="meta-description">Beschreibung</label>
+            <p class="text-small text-muted mb-1">Erscheint in Suchergebnissen (max. 160 Zeichen)</p>
+            <input type="text" id="meta-description" maxlength="160" placeholder="Eine kurze Beschreibung deines Blogs...">
+          </div>
+          <div class="form-group">
+            <label for="meta-author">Autor</label>
+            <input type="text" id="meta-author" maxlength="100" placeholder="Max Mustermann">
+          </div>
+        </div>
       </div>
 
       <!-- Footer Tab -->
@@ -205,6 +219,10 @@
           <div class="breakdown-row">
             <span>Base</span>
             <span id="overhead-breakdown-base">0 B</span>
+          </div>
+          <div class="breakdown-row">
+            <span>Meta</span>
+            <span id="overhead-breakdown-meta">0 B</span>
           </div>
           <div class="breakdown-row">
             <span>Navigation</span>
@@ -319,6 +337,8 @@
       const cssPreviewContent = document.getElementById('css-preview-content');
       const cssCustomEditor = document.getElementById('css-custom-editor');
       const globalCss = document.getElementById('global-css');
+      const metaDescription = document.getElementById('meta-description');
+      const metaAuthor = document.getElementById('meta-author');
       const linkPopup = document.getElementById('link-popup');
       const linkText = document.getElementById('link-text');
       const linkHref = document.getElementById('link-href');
@@ -482,6 +502,11 @@
       cssMode.addEventListener('change', () => updateCssModeUI());
       globalCss.addEventListener('input', debounce(updateOverhead, 300));
 
+      // ============ META EDITOR ============
+
+      metaDescription.addEventListener('input', debounce(updateOverhead, 300));
+      metaAuthor.addEventListener('input', debounce(updateOverhead, 300));
+
       // ============ BUILD SETTINGS ============
 
       function getHeaderLinks() {
@@ -505,6 +530,10 @@
           footer: {
             enabled: footerEnabled.checked,
             content: footerContent.value.trim(),
+          },
+          meta: {
+            description: metaDescription.value.trim() || undefined,
+            author: metaAuthor.value.trim() || undefined,
           },
         };
       }
@@ -530,12 +559,14 @@
 
           // Update breakdown table
           const breakdownBaseEl = document.getElementById('overhead-breakdown-base');
+          const breakdownMetaEl = document.getElementById('overhead-breakdown-meta');
           const breakdownNavEl = document.getElementById('overhead-breakdown-nav');
           const breakdownFooterEl = document.getElementById('overhead-breakdown-footer');
           const breakdownCssEl = document.getElementById('overhead-breakdown-css');
           const breakdownTotalEl = document.getElementById('overhead-breakdown-total');
 
           if (breakdownBaseEl) breakdownBaseEl.textContent = formatBytes(breakdown.base || 0);
+          if (breakdownMetaEl) breakdownMetaEl.textContent = formatBytes(breakdown.meta || 0);
           if (breakdownNavEl) breakdownNavEl.textContent = formatBytes(breakdown.navigation || 0);
           if (breakdownFooterEl) breakdownFooterEl.textContent = formatBytes(breakdown.footer || 0);
           if (breakdownCssEl) breakdownCssEl.textContent = formatBytes(breakdown.css || 0);
@@ -604,6 +635,10 @@
           cssMode.value = settings.cssMode || 'default';
           globalCss.value = settings.globalCss || '';
           updateCssModeUI();
+
+          // Meta
+          metaDescription.value = settings.meta?.description || '';
+          metaAuthor.value = settings.meta?.author || '';
 
           await updateOverhead();
         } catch (e) {
